src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway

spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
